@@ -1,5 +1,5 @@
 <Type Name="HRuler" FullName="Gtk.HRuler">
-  <TypeSignature Language="C#" Value="public class HRuler : Gtk.Ruler, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class HRuler : Gtk.Ruler, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Lee Mallabone" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,12 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A horizontal ruler.</summary>
+    <remarks>
+    <para>Rulers are used to show the location of the mouse in the window and to display the size of the window in the specified units. The available units of measurement are <see cref="P:Gtk.MetricType.Pixels"/>, <see cref="P:Gtk.MetricType.Inches"/> and <see cref="P:Gtk.MetricType.Centimeters"/>. The default is <see cref="P:Gtk.MetricType.Pixels"/>.</para>
+    <para>A horizontal ruler is typically used above or below another widget such as a <see cref="T:Gtk.DrawingArea"/>.</para>
+    <para>Note:- This widget is considered too specialized for GTK+, and will likely be moved to some other package in the future.</para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Ruler</BaseTypeName>
@@ -63,9 +67,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.HRuler'</returns>
-        <remarks>To be added</remarks>
+        <summary>Creates a new horizontal ruler.</summary>
+        <returns>A new HRuler.</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
