@@ -1,3 +1,7 @@
+2003-03-22  Lee Mallabone <mono-docs@fonicmonkey.net>
+
+	* en/Gtk/HRuler.xml: Short docs, simple API.
+
 2003-03-21  Lee Mallabone <mono-docs@fonicmonkey.net>
 
 	* en/Gtk/Adjustment.xml: First draft; good docs for ClampPage missing.
